cmake_minimum_required(VERSION 2.8.12)

SET(PROJECTNAME simple_example)
PROJECT(${PROJECTNAME})

SET(PROJECT_SRCS
    main.cu
  ) 

SET(CMAKE_CXX_FLAGS "-std=c++11")

FIND_PACKAGE(CUDA REQUIRED)
INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})

SET(LIBRARIES ${CUDA_LIBRARIES})

CUDA_ADD_EXECUTABLE(${PROJECTNAME} ${PROJECT_SRCS})

TARGET_LINK_LIBRARIES(${PROJECTNAME} ${LIBRARIES})
